--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -2,9 +2,9 @@
   <label for="name">Name</label>
   <input type="text" id="name" name="name">
 
-  <label for="name">Ingredients</label>
+  <label for="ingredients">Ingredients</label>
   <input type="text" id="ingredients" name="ingredients">
 
-  <label for="name">Cook Time</label>
+  <label for="cook_time">Cook Time</label>
   <input type="text" id="cook_time" name="cook_time">
 </form>
