--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,11 +1,11 @@
-<form action="/recipes/<%= @recipes.id %>" method="POST">
+<form action="/recipes/<%= @recipe.id %>" method="POST">
   <input type="hidden" name="_method" value="patch">
 
   <label for="name">Name</label>
-  <input type="text" id="name" name="name">
+  <input type="text" id="name" name="name" value="<%= @recipe.name %>"><br>
 
   <label for="ingredients">Ingredients</label>
-  <input type="text" id="ingredients" name="ingredients">
+  <input type="text" id="ingredients" name="ingredients" value="<%= @recipe.ingredients %>"><br>
 
   <label for="cook_time">Cook Time</label>
   <input type="text" id="cook_time" name="cook_time">
