--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -8,7 +8,7 @@
   <input type="text" id="ingredients" name="ingredients" value="<%= @recipe.ingredients %>"><br>
 
   <label for="cook_time">Cook Time</label>
-  <input type="text" id="cook_time" name="cook_time">
+  <input type="text" id="cook_time" name="cook_time" value="<%= @recipe.cook_time %>"><br>
 
   <input type="submit" value="submit">
 </form>
