--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,9 @@
-<h1>Article Index</h1>
 <ul>
-<% @articles.each do |art| %>
-<h2><%= art.title %></h2>
-<li><%= art.content %></li>
+<% @recipes.each do |recipe|%>
+  <li>
+    <a href="/recipes/<%= recipe.id %>">Name: <%= recipe.name %></a>
+    Ingredients: <%= recipe.ingredients %>
+    Cook time <%= recipe.cook_time %>
+  </li>
 <% end %>
 </ul>
