--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <ul>
 <% @recipes.each do |r|%>
   <li>
-    <a href="/recipes/<%= recipe.id %>">Name: <%= r.name %></a>
+    <a href="/recipes/<%= r.id %>">Name: <%= r.name %></a>
     Ingredients: <%= r.ingredients %>
     Cook time <%= r.cook_time %>
   </li>
