--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,5 +1,5 @@
 <form action="/recipes/<%= @recipe.id %>" method="POST">
-  <input type="hidden" name="_method" value="patch">
+  <input type="hidden" id="hidden" name="_method" value="patch">
 
   <label for="name">Name:</label>
   <input type="text" id="name" name="name" value="<%= @recipe.name %>"><br>
