Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <ul>
-<% @recipes.each do |recipes|%>
+<% @recipes.each do |recipe|%>
   <li>
     <a href="/recipes/<%= recipe.id %>">Name: <%= recipes.name %></a>
     Ingredients: <%= recipes.ingredients %>
